[tool.poetry]
name = "repl_python3_FastAPI-Template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
pydantic = "^1.8.1"
replit = "^3.0.0"
uvicorn = "^0.13.4"
starlette ="^0.13.6"
pandas = "^1.4.1"
numpy = "^1.22.2"
joblib = "^1.1.0"
supabase = "^0.5.3"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
